--- a/eternal-web/src/main/webapp/assets/common/css/app.css
+++ b/eternal-web/src/main/webapp/assets/common/css/app.css
@@ -1,3 +1,20 @@
 .mainContainer {
     margin-top: 50px;
 }
+
+#loading {
+    display: none;
+    position: fixed;
+    background: rgba(253, 253, 253, 0.7);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    z-index: 10000
+}
+
+#loading > img {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    right: 50%
+}
