加入jquery校验和hibernate校验

--- a/eternal-web/src/main/webapp/assets/common/css/core.css
+++ b/eternal-web/src/main/webapp/assets/common/css/core.css
@@ -1,6 +1,6 @@
 /* html font  */
 html body {
-    font-family:  "宋体",arial,tahoma,sans-serif;
+    font-family: "微软雅黑", "宋体",arial,tahoma,sans-serif;
 }
 /* margin5 */
 .margin5-t {
